// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component should render when movie is already in user favorite list 1`] = `
<div
  className="css-1nkcf6k"
>
  <div
    className="user-actions"
  >
    <span
      className="rating"
    >
      8
      <span
        className="glyphicon glyphicon-star"
      />
    </span>
    <span
      className="year"
    >
      <span
        className="glyphicon glyphicon-calendar"
      />
      2019
    </span>
    <a
      className="remove-from-favorites"
      onClick={[Function]}
      title="Remove From Favorites"
    >
      <span
        className="glyphicon glyphicon-heart"
      />
    </a>
    <a
      className="add-to-watchlist"
      onClick={[Function]}
      title="Add to List"
    >
      <span
        className="glyphicon glyphicon-bookmark add-to-list"
      />
    </a>
  </div>
</div>
`;

exports[`Carousel Component should render when movie is not in user list 1`] = `
<div
  className="css-1nkcf6k"
>
  <div
    className="user-actions"
  >
    <span
      className="rating"
    >
      8
      <span
        className="glyphicon glyphicon-star"
      />
    </span>
    <span
      className="year"
    >
      <span
        className="glyphicon glyphicon-calendar"
      />
      2019
    </span>
    <a
      className="add-to-favorites"
      onClick={[Function]}
      title="Add to Favorites"
    >
      <span
        className="glyphicon glyphicon-heart add-to-list"
      />
    </a>
    <a
      className="add-to-watchlist"
      onClick={[Function]}
      title="Add to List"
    >
      <span
        className="glyphicon glyphicon-bookmark add-to-list"
      />
    </a>
  </div>
</div>
`;
